Fix margins on mobile

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -393,7 +393,7 @@
 @media screen and (max-width: 1200px) {
   .HomePage {
     .Section100vh {
-      min-height: calc(100vh - 20px + 26px * 2);
+      min-height: calc(100vh - 20px - 26px * 2);
       padding-top: 29px;
 
       .Section100vhContent {
